round top alignment fixed

--- a/_overlays/css/style.css
+++ b/_overlays/css/style.css
@@ -59,6 +59,7 @@ body {
     width: 210px;
     height: 36px;
     left: 850px;
+    top: 4px;
     line-height: 36px;
     text-align: center;
     font-size: 22px;
